"fixed swagger.json file"
