# swagger.json
@@ -5,10 +5,10 @@
     "description": "Employees list API",
     "version": "1.0.0"
   },
-  "host": "localhost:3000",
+  "host": "cse341project2-bkgg.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
     "/": {
